[gd_scene load_steps=3 format=2]

[ext_resource path="res://2D_interface/CardPlayArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 300 )

[node name="CardPlayArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_PlayArea_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlayArea_mouse_exited"]
